--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -61,7 +61,14 @@
     <div class="project">
       <h3>Project 2</h3>
       <p>Description of Project 2</p>
-      <a href="project2.html" target="_blank">View Project</a>
+      <a href="project2.html" download>Download Setup</a>
+    </div>
+    <div class="project">
+      <h3>Matlab Project</h3>
+      <p>This Matlab projects is an app created to accept an unlimited number of forces</p>
+      <p>Each force is matched with its corresponding angle</p>
+      <p>The app finnaly computes the resultant force and angle</p>
+      <a href="Coplaner_matlab_app.rar" download>Download Setup</a>
     </div>
     <!-- Add more projects as needed -->
   </section>
