--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -45,6 +45,8 @@
       <li>HTML</li>
       <li>CSS</li>
       <li>JavaScript</li>
+      <li>Programming in C and C++</li>
+      <li>Matlab</li>
     <!-- Add more skills as needed -->
     </ul>
   </section>
@@ -61,7 +63,7 @@
     <div class="project">
       <h3>Project 2</h3>
       <p>Description of Project 2</p>
-      <a href="project2.html" download>Download Setup</a>
+      <a href="project2.html" target="_blank">View Project</a>
     </div>
     <div class="project">
       <h3>Matlab Project</h3>
