--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>My Portfolio</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
   <!-- Header Section -->
