--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -3,6 +3,7 @@
 <head>
   <title>My Portfolio</title>
   <link rel="stylesheet" href="homepage.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <!-- Header Section -->
@@ -85,11 +86,16 @@
     <!-- Contact information, social media links, and copyright information -->
     <h3>Contact Me</h3>
     <ul>
-      <li>Email: godwinsallah@gmail.com</li>
-      <li>Phone: +233-592-184-481</li>
-      <li><a href="https://wa.me/qr/6MGQJVJD56WCN1" target="_blank">WhatsApp Me</a></li>
-      <li><a href="https://www.linkedin.com/in/godwin-sallah-b7b41b216/" target="_blank">LinkedIn</a></li>
-      <li><a href="https://github.com/godwinsallah" target="_blank">GitHub</a></li>
+	<li>Email: godwinsallah@gmail.com <a href="mailto:godwinsallah@gmail.com">
+			<i class="fa fa-envelope"></i></a>
+	</li>
+        <li>Phone: +233-592-184-481</li>
+        <li><a href="https://wa.me/qr/6MGQJVJD56WCN1" class="social_icon" target="_blank">WhatsApp Me</a></li>
+        <li><a href="https://www.linkedin.com/in/godwin-sallah-b7b41b216/" class="social_icon" target="_blank">
+		    <i class="fa fa-linkedin"></i>
+        </a></li>
+        <li><a href="https://twitter.com/sallah_godwin" class="social_icon" target="_blank"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="https://github.com/godwinsallah" class="social_icon" target="_blank"><i class="fa fa-github"></i></a></li>
     </ul>
     <p>&copy; 2023 Sallah Godwin. All rights reserved.</p>
   </footer>
