--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -86,17 +86,17 @@
     <!-- Contact information, social media links, and copyright information -->
     <h3>Contact Me</h3>
     <ul>
-	<li>Email:<a href="mailto:godwinsallah@gmail.com">
-			godwinsallah16@gmil.com<i class="fa fa-envelope"></i></a>
+	<li>Email: <a href="mailto:godwinsallah@gmail.com">
+			godwinsallah16@gmil.com <i class="fa fa-envelope"></i></a>
 	</li>
         <li>Phone: +233-592-184-481</li>
-        <li> <a href="https://wa.me/qr/6MGQJVJD56WCN1" class="social_icon" target="_blank">WhatsApp<i class="fab fa-whatsapp"></a></li>
-        <li><a href="https://www.linkedin.com/in/godwin-sallah-b7b41b216/" class="social_icon" target="_blank">
+        <li>WhatsApp: <a href="https://wa.me/qr/6MGQJVJD56WCN1" target="_blank">+233267878351<i class="fab fa-whatsapp"></a></li>
+        <li><a href="https://www.linkedin.com/in/godwin-sallah-b7b41b216/" target="_blank">
 		    LinkedIn<i class="fa fa-linkedin"></i>
         </a></li>
-        <li><a href="https://twitter.com/sallah_godwin" class="social_icon" target="_blank">
+        <li><a href="https://twitter.com/sallah_godwin" target="_blank">
 			Twitter<i class="fab fa-twitter"></i></a></li>
-        <li><a href="https://github.com/godwinsallah" class="social_icon" target="_blank">
+        <li><a href="https://github.com/godwinsallah"  target="_blank">
 			Github<i class="fa fa-github"></i></a></li>
     </ul>
     <p>&copy; 2023 Sallah Godwin. All rights reserved.</p>
