--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -3,7 +3,7 @@
 <head>
   <title>My Portfolio</title>
   <link rel="stylesheet" href="homepage.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
   <!-- Header Section -->
