--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -3,7 +3,8 @@
 <head>
   <title>My Portfolio</title>
   <link rel="stylesheet" href="homepage.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-9K9z4Iy0fU6dFJlCcCfsOVJezZzVnC+8gE+N1h9b/KQlIm2++oBdKBvIxIuJTn0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
   <!-- Header Section -->
