--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -91,14 +91,18 @@
 			godwinsallah16@gmil.com <i class="fa fa-envelope"></i></a>
 	</li>
         <li>Phone: +233-592-184-481</li>
-        <li>WhatsApp: <a href="https://wa.me/qr/6MGQJVJD56WCN1" target="_blank">+233267878351<i class="fab fa-whatsapp"></a></li>
+        <li>WhatsApp: <a href="https://wa.me/qr/6MGQJVJD56WCN1" target="_blank">+233267878351 
+			<i class="fab fa-whatsapp"></i>
+	</a></li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/godwin-sallah-b7b41b216/" target="_blank">
 		  Godwin Sallah <i class="fa fa-linkedin"></i>
         </a></li>
         <li>Twitter: <a href="https://twitter.com/sallah_godwin" target="_blank">
-			sallah_godwin <i class="fab fa-twitter"></i></a></li>
+			sallah_godwin <i class="fab fa-twitter"></i>
+	</a></li>
         <li>Github: <a href="https://github.com/gsallahofficial"  target="_blank">
-			gsallahofficial <i class="fa fa-github"></i></a></li>
+			gsallahofficial <i class="fa fa-github"></i>
+	</a></li>
     </ul>
     <p>&copy; 2023 Sallah Godwin. All rights reserved.</p>
   </footer>
