--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -3,7 +3,6 @@
 <head>
   <title>My Portfolio</title>
   <link rel="stylesheet" href="homepage.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-9K9z4Iy0fU6dFJlCcCfsOVJezZzVnC+8gE+N1h9b/KQlIm2++oBdKBvIxIuJTn0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
@@ -88,8 +87,8 @@
     <h3>Contact Me</h3>
     <ul>
 	<li>Email: <a href="mailto:godwinsallah@gmail.com">
-			godwinsallah16@gmil.com <i class="fa fa-envelope"></i></a>
-	</li>
+			godwinsallah16@gmil.com <i class="fa fa-envelope"></i>
+	</a></li>
         <li>Phone: +233-592-184-481</li>
         <li>WhatsApp: <a href="https://wa.me/qr/6MGQJVJD56WCN1" target="_blank">+233267878351 
 			<i class="fab fa-whatsapp"></i>
