--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -3,6 +3,7 @@
 <head>
   <title>My Portfolio</title>
   <link rel="stylesheet" href="homepage.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-EZ5b+8uP5Zdkv+hgO+35tbAIS7dRtRzSv7RY+ocgM4V7j2Bx9J4AGNjfhAdJ05lN+QfTqLLrLs+NjXTs6sJHvg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -94,13 +95,13 @@
 			<i class="fab fa-whatsapp"></i>
 	</a></li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/godwin-sallah-b7b41b216/" target="_blank">
-		  Godwin Sallah <i class="fa fa-linkedin"></i>
+		  Godwin Sallah <i class="fab fa-linkedin"></i>
         </a></li>
         <li>Twitter: <a href="https://twitter.com/sallah_godwin" target="_blank">
 			sallah_godwin <i class="fab fa-twitter"></i>
 	</a></li>
         <li>Github: <a href="https://github.com/gsallahofficial"  target="_blank">
-			gsallahofficial <i class="fa fa-github"></i>
+			gsallahofficial <i class="fab fa-github"></i>
 	</a></li>
     </ul>
     <p>&copy; 2023 Sallah Godwin. All rights reserved.</p>
