--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -64,7 +64,11 @@
     <div class="project">
       <h3>Project 2</h3>
       <p>Description of Project 2</p>
-      <a href="project2.html" target="_blank">View Project</a>
+      <video width="640" height="360" controls>
+        <source src="project2.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <a href="project2.mp4" download>Download Video</a>
     </div>
     <div class="project">
       <h3>Matlab Project</h3>
@@ -87,7 +91,7 @@
     <h3>Contact Me</h3>
     <ul>
 	<li>Email: <a href="mailto:godwinsallah@gmail.com">
-			godwinsallah16@gmil.com <i class="fa fa-envelope"></i>
+			godwinsallah16@gmail.com <i class="fa fa-envelope"></i>
 	</a></li>
         <li>Phone: +233-592-184-481</li>
         <li>WhatsApp: <a href="https://wa.me/qr/6MGQJVJD56WCN1" target="_blank">+233267878351 
