--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -65,7 +65,7 @@
       <h3>Project 2</h3>
       <p>Description of Project 2</p>
       <video width="640" height="360" controls>
-        <source src="project2.mp4" type="video/mp4">
+        <source src="'lightroom tutorial_3.mp4'" type="video/mp4">
         Your browser does not support the video tag.
       </video>
       <a href="project2.mp4" download>Download Video</a>
