--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -61,14 +61,13 @@
       <p>Description of Project 1</p>
       <a href="project1.html" target="_blank">View Project</a>
     </div>
-    <div class="project">
-      <h3>Project 2</h3>
-      <p>Description of Project 2</p>
-      <video width="640" height="360" controls>
-        <source src="'lightroom tutorial_3.mp4'" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-      <a href="project2.mp4" download>Download Video</a>
+   <div class="project">
+  <h3>Project 2</h3>
+  <p>Description of Project 2</p>
+  <iframe width="640" height="360" src="https://youtube.com/shorts/ee8E0sg-1sw?feature=share" frameborder="0" allowfullscreen></iframe>
+  <a href="https://youtube.com/shorts/ee8E0sg-1sw?feature=share" target="_blank">Watch on YouTube</a>
+</div>
+  <a href="'lightroom tutorial_3.mp4'" download>Download Video</a> 
     </div>
     <div class="project">
       <h3>Matlab Project</h3>
