--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -67,14 +67,14 @@
   <iframe width="640" height="360" src="https://youtube.com/shorts/ee8E0sg-1sw?feature=share" frameborder="0" allowfullscreen></iframe>
   <a href="https://youtube.com/shorts/ee8E0sg-1sw?feature=share" target="_blank">Watch on YouTube</a>
 </div>
-  <a href="'lightroom tutorial_3.mp4'" download>Download Video</a> 
+  <a href="lightroom_1.mp4" download>Download Video</a> 
     </div>
     <div class="project">
       <h3>Matlab Project</h3>
       <p>This Matlab projects is an app created to accept an unlimited number of forces</p>
       <p>Each force is matched with its corresponding angle</p>
       <p>The app finnaly computes the resultant force and angle</p>
-      <a href="Coplaner_matlab_app.rar" download>Download Setup</a>
+      <a href=" Complaner.rar" download>Download Setup</a>
     </div>
     <!-- Add more projects as needed -->
   </section>
