--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -64,7 +64,7 @@
    <div class="project">
   <h3>Project 2</h3>
   <p>Description of Project 2</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/ee8E0sg-1sw?feature" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/shorts/ee8E0sg-1sw?feature" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   <a href="https://youtube.com/shorts/ee8E0sg-1sw?feature" target="_blank">Watch on YouTube</a>
 </div>
   <a href="lightroom_1.mp4" download>Download Video</a> 
