--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -48,6 +48,8 @@
       <li>JavaScript</li>
       <li>Programming in C and C++</li>
       <li>Matlab</li>
+      <li>Video Editing</li>
+      <li>Photo Editing</li>
     <!-- Add more skills as needed -->
     </ul>
   </section>
