--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -69,7 +69,7 @@
   <p>You'll learn how to transform ordinary photos into stunning works of art using Lightroom's advanced tools and techniques.</p>
   <p>Join us on this creative journey to take your photography skills to the next level.</p>
     <iframe width="560" height="315" src="https://youtube.com/shorts/ee8E0sg-1sw" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-  <a href="https://youtube.com/shorts/ee8E0sg-1sw?feature" target="_blank">Watch on YouTube</a>
+  <a href="https://youtube.com/shorts/ee8E0sg-1sw" target="_blank">Watch on YouTube</a>
 </div>
   <a href="lightroom_1.mp4" download>Download Video</a> 
     </div>
