--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -4,6 +4,7 @@
   <title>My Portfolio</title>
   <link rel="stylesheet" href="homepage.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta name="viewport" content="width=device-width ,scale=1.0">
 </head>
 <body>
   <!-- Header Section -->
@@ -68,8 +69,8 @@
   <p>In this video project, we'll explore the powerful photo editing capabilities of Adobe Lightroom.</p>
   <p>You'll learn how to transform ordinary photos into stunning works of art using Lightroom's advanced tools and techniques.</p>
   <p>Join us on this creative journey to take your photography skills to the next level.</p>
-    <iframe width="560" height="315" src="https://youtube.com/shorts/ee8E0sg-1sw" frameborder="0" allow="autoplay" allowfullscreen></iframe>
-  <a href="https://youtube.com/shorts/ee8E0sg-1sw" target="_blank">Watch on YouTube</a>
+    <iframe width="560" height="315" src="https://youtu.be/cVaNOaATsZA" frameborder="0" allow="autoplay; encripted-media" allowfullscreen></iframe>
+  <a ihref="https://youtu.be/cVaNOaATsZA" target="_blank">Watch on YouTube</a>
 </div>
   <a href="lightroom_1.mp4" download>Download Video</a> 
     </div>
