--- a/Portfolio/homepage.html
+++ b/Portfolio/homepage.html
@@ -69,7 +69,7 @@
   <p>In this video project, we'll explore the powerful photo editing capabilities of Adobe Lightroom.</p>
   <p>You'll learn how to transform ordinary photos into stunning works of art using Lightroom's advanced tools and techniques.</p>
   <p>Join us on this creative journey to take your photography skills to the next level.</p>
-    <iframe width="560" height="315" src="https://youtu.be/cVaNOaATsZA" frameborder="0" allow="autoplay; encripted-media" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://youtu.be/cVaNOaATsZA" frameborder="0" allow="autoplay" allowfullscreen></iframe>
   <a ihref="https://youtu.be/cVaNOaATsZA" target="_blank">Watch on YouTube</a>
 </div>
   <a href="lightroom_1.mp4" download>Download Video</a> 
